# ai-agent-platform

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.en.md  README.md  graph-login-snapshot.md  package-lock.json  pyproject.toml  test_frontend_api.js
apps/interaction-data-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/interaction-data-service/app/: config.py  factory.py
apps/interaction-data-service/docs/: README.md  service-design.md  test-case-service-api-design.md  usecase-workflow-design.md
apps/interaction-data-service/tests/: test_test_case_service_api.py  test_test_case_service_idempotency.py
apps/platform-api/: .env.example  Dockerfile  README.md  pyproject.toml  worker.py
apps/platform-api-v2/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
apps/platform-api-v2/app/: __init__.py  factory.py
apps/platform-api-v2/docs/: README.md  architecture-v2.md  audit-standard.md  engineering-standards.md  first-batch-module-map.md  frontend-switch-strategy.md  harness-playbook.md  operations-standard.md  permission-standard.md  phase-2-checklist.md  phase-2-completion.md  phase-2-governance-baseline.md  phase-2-p1-runtime-workspace.md  phase-2-release-draft.md  phase-2-smoke-checklist.md  phase-3-chat-acceptance-checklist.md  phase-3-checklist.md  phase-3-completion.md  phase-3-p0-operations-worker.md  phase-3-p1-runtime-policies.md  phase-3-p2-operations-center.md  phase-3-p4-platform-config.md  phase-4-checklist.md  postgres-baseline.md
apps/platform-api-v2/tests/: test_graph_parameter_schema_provider.py  test_phase6_normalization_regressions.py  test_project_knowledge_contract.py  test_project_knowledge_service_integration.py
apps/platform-api/app/: config.py  factory.py
apps/platform-api/deploy/: docker-compose.example.yml
langgraph_teach/teach_agent_use_1/: graph.json  llms.py  main.py  package-lock.json  pyproject.toml  requirements.txt  start_server.py  ui_test_tools.py
(+1596 files in other folders)
